--- a/documentation/der.tex
+++ b/documentation/der.tex
@@ -11,14 +11,8 @@
 \usetikzlibrary{positioning}
 \usetikzlibrary{shadows}
 
-\tikzstyle{every entity} = [top color=white, bottom color=blue!30,
-                            draw=orange!50!black!100, drop shadow]
-\tikzstyle{every weak entity} = [drop shadow={shadow xshift=.7ex,
-                                 shadow yshift=-.7ex}]
-\tikzstyle{every attribute} = [top color=white, bottom color=yellow!20,
-                               draw=yellow, node distance=1cm, drop shadow]
-\tikzstyle{every relationship} = [top color=white, bottom color=red!20,
-                                  draw=red!50!black!100, drop shadow]
+\tikzstyle{every entity} = [top color=white, bottom color=orange!80,
+                            draw=yellow!50!black!100, drop shadow]
 
 \centering
 \scalebox{.87}{
