--- a/documentation/main_document.tex
+++ b/documentation/main_document.tex
@@ -22,11 +22,6 @@
 
 This is the first section.
 
-Lorem  ipsum  dolor  sit  amet,  consectetuer  adipiscing
-elit.   Etiam  lobortisfacilisis sem.  Nullam nec mi et
-neque pharetra sollicitudin.  Praesent imperdietmi nec ante.
-Donec ullamcorper, felis non sodales...
-
 % \addcontentsline{toc}{section}{DER}
 % \section*{DER}
 \section{DER}
@@ -34,11 +29,27 @@ Donec ullamcorper, felis non sodales...
   % this include the content of der-content.tex
   \include{der-content}
 
-  \begin{abstract}
-  This is a simple paragraph at the beginning of the
-  document. A brief introduction about the main subject.
-  % \include{dic-datos-content}
-  \end{abstract}
+  \begin{Diccionario de Datos}
+   \textbf{Provincias}          = @id + nombre
+   \textbf{Localidades}         = @id + nombre
+   \textbf{Clientes}            = @id + \underline{idProvincia} + \underline{idLocalidad} + nombre + telefono + celular + mail + direccion + piso + nroDepartamento
+   \textbf{Facturas}            = @id + \underline{idCliente} + tipo + codigo + fecha + saldo + subtotal + iva + total % subtotal = neto gravado
+   \textbf{Recibos}             = @id + \underline{idCliente} + \underline{idFactura} + fecha + total
+
+   \textbf{Viajes}              = @id + \underline{idCliente} + fecha + precio
+   \textbf{Viajes-Destinos}     = @id + \underline{idViaje} + \underline{idDestino}
+   \textbf{Destinos}            = @id + \underline{idChofer} + latitud + longitud + pais + provincia + localidad + direccion + piso + departamento
+   \textbf{Cargas}              = @id + \underline{idTipoCarga} + \underline{idDestino} + cantidad + pesoPorUnidad + ancho + largo
+   \textbf{TiposDeCarga}        = @id + nombre
+   \textbf{Choferes}            = @id + nombre + vctRegistro + telefono + celular + mail + direccion + piso + nroDepartamento
+   \textbf{PagoComisiones}      = @id + \underline{idChofer} + \underline{idFactura} + fecha + total
+
+   \textbf{Marcas}              = @id + nombre
+   \textbf{Modelos}             = @id + nombre
+   \textbf{Vehiculos}           = @id + \underline{idTipoVehiculo} + \underline{idMarca} + \underline{idModelo} + patente + año
+   \textbf{ChoferesVehiculos}   = @id + \underline{idChofer} + \underline{idVehiculo}
+
+  \end{Diccionario de Datos}
 
 \section{another section}
 
