First draft of data added as answers to similar questions regarding why buy the soft

--- a/documentation/busines_view.tex
+++ b/documentation/busines_view.tex
@@ -10,18 +10,34 @@
 
 \section{Idea y Oportunidad de Negocio}
 \begin{}{Que tiene de innovadora nuestra idea ?}
-La idea tiene de innovacion la posibilidad
+  La idea tiene de innovacion :
+    - la creacion de un sistema modular
+    - la posibilidad de sincronizar tareas entre distintas areas
+      tales como ( proveedores - transportistas - cliente - distribuidoras )
+      todo por medio de una aplicacion mobile sincronizada con
+      servidores en la nube.
 \end
 
 \begin{}{Cuales son las necesidades o deseos de los
          consumidores que van a satisfacer ?}
+  Las necesidades a satisfacer son las siguientes :
+    - Mayor organizacion a la hora de gestionar envios de mercaderias
+      desde la salida del Deposito hasta la puerta del comprador/es.
 \end
 
-\begin{}{Cuales dson los beneficion que nuestro producto (bien o servicio)
+\begin{}{Cuales son los beneficios que nuestro producto (bien o servicio)
          ofrecera al cliente ?}
+  Los beneficios que el producto ofrece son:
+    - Mayor tiempo de busqueda en nuevas oportunidades de negocio.
+    - Tranquilidad y Visibilidad en cada etapa del
+        proceso de entrega de productos.
 \end
 
 \begin{}{Porque el cliente comprara nuestro producto ?}
+  El cliente compraria nuestro producto por :
+    - Muchas variedades de soluciones para distintas areas del proceso
+      de transporte de productos.
+    - Alta confiabilidad y seguridad de datos.
 \end
 
 \begin{}{Puede este negocio generar dinero ?}
