Adds ways to sell the product

--- a/documentation/busines_view.tex
+++ b/documentation/busines_view.tex
@@ -11,18 +11,21 @@
 \section{Idea y Oportunidad de Negocio}
 \begin{}{Que tiene de innovadora nuestra idea ?}
   La idea tiene de innovacion :
-    - la creacion de un sistema modular
-    - la posibilidad de sincronizar tareas entre distintas areas
-      tales como ( proveedores - transportistas - cliente - distribuidoras )
-      todo por medio de una aplicacion mobile sincronizada con
-      servidores en la nube.
+    - La creacion de un sistema modular.
+    - La posibilidad de sincronizar tareas entre distintas areas
+        tales como ( proveedores - transportistas - clientes - distribuidoras )
+        todo por medio de una aplicacion mobile sincronizada con
+        servidores en la nube.
 \end
 
-\begin{}{Cuales son las necesidades o deseos de los
-         consumidores que van a satisfacer ?}
+\begin{}{Cuales son las necesidades o deseos de los consumidores que van a
+          satisfacer ?}
   Las necesidades a satisfacer son las siguientes :
     - Mayor organizacion a la hora de gestionar envios de mercaderias
-      desde la salida del Deposito hasta la puerta del comprador/es.
+        desde la salida del Deposito hasta la puerta del comprador/es.
+    - Mejor trazabilidad de rutas a destinos.
+    - Verificacion de entregas por medio de aplicacion mobile
+        desde el punto de entrega del transportista.
 \end
 
 \begin{}{Cuales son los beneficios que nuestro producto (bien o servicio)
@@ -31,6 +34,8 @@
     - Mayor tiempo de busqueda en nuevas oportunidades de negocio.
     - Tranquilidad y Visibilidad en cada etapa del
         proceso de entrega de productos.
+    - Sistema de valoracion de entregas por medio de
+        aplicacion mobile desde el cliente.
 \end
 
 \begin{}{Porque el cliente comprara nuestro producto ?}
@@ -41,6 +46,16 @@
 \end
 
 \begin{}{Puede este negocio generar dinero ?}
+  Definitivamente.
+  La estrategia de venta va a ser basada en
+  distintos Packs de soluciones por medio de modulos
+  a demanda del cliente.
+
+  Todas la nuevas caracteristicas que el cliente quiera agregar
+  al producto base no perjudicara el trabajo actual ya realizado
+  por el cliente.
+
+  Tambien se puede ofrecer Soporte en horarios de trabajo.
 \end
 
 \endsection{Idea y Oportunidad de Negocio}
