Adds bold to inner list item titles and fix content table menu

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -78,18 +78,20 @@ BCOR5mm, % Binding correction
 
   Tambien se puede ofrecer Soporte en horarios de trabajo.
 
+\pagebreak
+
 \section {Viabilidad de Negocio}
 
 \subsection{Proceso Productivo}
 \begin{itemize}
-  \item Materiales Necesarios
+  \item \textbf {Materiales Necesarios}
   \begin{itemize}
     \item Discos Externos
     \item Pendrives
     \item Ambiente no mas de 20 Grados Cent.
   \end{itemize}
 
-  \item Tecnologia Necesaria
+  \item \textbf {Tecnologia Necesaria}
   \begin{itemize}
     \item Internet, con velocidades no menores a
             1GB de bajada y 500MB de subida.
@@ -97,12 +99,12 @@ BCOR5mm, % Binding correction
     \item Luz
   \end{itemize}
 
-  \item Mano de Obra
+  \item \textbf {Mano de Obra}
   \begin{itemize}
     \item No mas de 5 desarrolladores Ssr.
   \end{itemize}
 
-  \item Insumos
+  \item \textbf {Insumos}
   \begin{itemize}
     \item Monitores
     \item Teclados
@@ -116,14 +118,14 @@ BCOR5mm, % Binding correction
 
 \subsection{Localizacion}
 \begin{itemize}
-  \item Costo de transporte
+  \item \textbf {Costo de transporte}
   \begin{itemize}
     \item No habria costo, porque cada uno podria trabajar
             desde su domicilio, siempre y cuando pueda cumplir
             las condiciones de los Materiales Necesarios.
   \end{itemize}
 
-  \item Comunicaciones
+  \item \textbf {Comunicaciones}
   \begin{itemize}
     \item Todo tipo de comunicacion se realizaria a traves de internet
             compartiendo codigo del proyecto en un repositorio privado.
@@ -133,21 +135,21 @@ BCOR5mm, % Binding correction
 
 \subsection{Requerimientos Tecnicos}
 \begin{itemize}
-  \item Tecnologias
+  \item \textbf {Tecnologias}
   \begin{itemize}
     \item Librerias de libre uso y distribucion para el manejo de ventanas
           y herramientas varias (Botones ejecutables - Barras de desplazamiento )
           en el sistema operativo objetivo.
   \end{itemize}
 
-  \item Estructura Organizacional
+  \item \textbf {Estructura Organizacional}
   \begin{itemize}
     \item Lider de Proyecto
     \item Administrador de Proyecto
     \item Desarrolladores
   \end{itemize}
 
-  \item Mapa de Proceso
+  \item \textbf {Mapa de Proceso}
   \begin{itemize}
     \item Entrevista con el Cliente
     \item Relevamiento de Informacion a tener en cuenta
