Adds documentation to gitignore and renames der_content.tex file

--- a/documentation/main_document.tex
+++ b/documentation/main_document.tex
@@ -29,7 +29,7 @@ El mismo, posee la funcionalidad de Trackeo de vehiculos y la generacion de la m
 % \section*{DER}
 
   % this include the content of der-content.tex
-  \include{der-content}
+  \include{der_content}
 
 \section{Diccionario de Datos}
 
