Working on the addition of details

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -86,22 +86,44 @@ BCOR5mm, % Binding correction
 \begin{itemize}
   \item \textbf {Materiales Necesarios}
   \begin{itemize}
-    \item Discos Externos
-    \item Pendrives
-    \item Ambiente no mas de 20 Grados Cent.
+    \item Se requiere el uso de discos externos para la administracion de
+            guardado de informacion relevante al desarrollo del producto.
+    \item Se requiere el uso de pendrives para el facil y comodo traslado
+            de archivos de video, librerias y graficos para ser utilizados
+            el dia que se requiera una presentacion al cliente en las oficinas
+            del mismo.
+    \item Se requiere utilizar un ambiente de oficina  contando con no mas
+            de 20 Grados Cent para una mayor refrigeracion y rendimiento de los
+            equipos tecnicos utilizados para lleva a cabo las tareas de desarrollo.
   \end{itemize}
 
   \item \textbf {Tecnologia Necesaria}
   \begin{itemize}
-    \item Internet, con velocidades no menores a
-            1GB de bajada y 500MB de subida.
-    \item Telefonia
-    \item Luz
+    \item Se requiere una conexion a Internet, con velocidades no menores a
+            1GB de bajada y 500MB de subida para mantener comunicacion
+            constante, rapida, confiable e ininterrumpida entre diferentes
+            miembros de la empresa. Esto habilita estar a la vanguardia de las
+            ultimas actualizaciones en desarrollo y la utilizacion de
+            herramientas en Internet para una mayor administracion de los
+            procesos de tareas y estado de los desarrollos.
+    \item Se requiere la utilizacion de telefonia celular entre los integrantes
+            de los equipos para mantener contacto en posibles escenarios donde
+            se deba realizar operaciones de soporte fuera de los horarios de
+            oficina para el mantenimiento en servidores donde se encuentran
+            alojadas los desarrollos realizados y estado de pruebas.
+
+    \item Se requiere de un buen servicio de luz, ya que sin el nada seria
+            posible. Como estrategia en caso de emergencias ( un corte de luz ),
+            se utilizaria un generador electrico para suministrar los
+            equipos electronicos, ya que varios de ellos requieren mantenerse
+            prendidos en todo momento.
   \end{itemize}
 
   \item \textbf {Mano de Obra}
   \begin{itemize}
-    \item No mas de 5 desarrolladores Ssr.
+    \item Para la creacion de la empresa, se requiere de personal capacitado y
+            competente acorde a los actuales estandares del desarrollo de sistemas
+            de computacion para tener que evitar una previa capacitacion.
   \end{itemize}
 
   \item \textbf {Insumos}
