--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -128,13 +128,35 @@ BCOR5mm, % Binding correction
 
   \item \textbf {Insumos}
   \begin{itemize}
-    \item Monitores
-    \item Teclados
-    \item Mouse
-    \item Gabinetes armados con lo mejor en hardware al alcance disponible
-    \item Cables de Red
-    \item Modem o Router Wifi
-    \item Expansores de Señal de Wifi
+    \item Se requiere de un buen aprovisionamiento de monitores de alta gama,
+            ya que con ellos, los programadores pueden tener mas herramientas
+            a la vista y agilizar su desarrollo tanto como su desempeño a la
+            hora de analizar nuevos requerimientos y llevar a cabo las tareas
+            necesarias de investigacion, desarrollo y pruebas del producto.
+    \item Se requiere de un buen aprovisionamiento de teclados ergonomicos
+            ya que los teclados comunes conducen a una postura poco saludable
+            para todo aquel que pase mucho tiempo frente a una computadora.
+            El desarrollador es la materia prima de la empresa y el teclado
+            es su principal herramienta para el ingreso de sus ideas.
+    \item Se requiere de un buen aprovisionamiento de mouse \(punteros de ordenaror\)
+            ya que algunas aplicaciones, ya sean utilizadas en internet o de
+            escritorio, requieren la accion de presionar sobre botones en la
+            pantalla.
+      \item Se requiere de gabinetes \(Caja rectangular donde se unen componentes
+              alimentados por cables de electricidad unidos a una placa madre
+              que ejecutan las tareas internas del ordenador\) armados
+              con hardware \(Componentes individuales del ordenador\) capaz
+              de procesar tareas complejas a una velocidad rapida y eficiente.
+    \item Se requiere de un buen aprovisionamiento de cables de red ya que
+            sin ellos los equipos y servidores que requieran de una conectividad
+            fluida entre ellos y a Internet, dependerian de una conexion por
+            red inalambrica, inestable y mucho mas lenta.
+    \item Se requiere de un buen aprovisionamiento de modems \( Dispositivo
+            que facilita la conexion entre un ordenador e Internet \) o
+            Routers \( Dispositivo que facilita la conexion entre un
+            ordenador e Internet u otros dispositivos conectados al mismo
+            Router \) Wifi para conectividad de red sin cable.
+    \item Se requiere de un Expansores de Señal de Wifi
   \end{itemize}
 \end{itemize}
 
