--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -155,8 +155,13 @@ BCOR5mm, % Binding correction
             que facilita la conexion entre un ordenador e Internet \) o
             Routers \( Dispositivo que facilita la conexion entre un
             ordenador e Internet u otros dispositivos conectados al mismo
-            Router \) Wifi para conectividad de red sin cable.
-    \item Se requiere de un Expansores de Señal de Wifi
+            Router \) Wifi \( Tecnologia de transmision de datos por medio de
+            señales de ondas de radio en distintas frecuencias \) para
+            conectividad de red sin cable.
+    \item Se requiere de un buen aprovisionamiento de expansores de señal Wifi
+            para un mayor abastecimiento de señal en todo el edificio y
+            no depender de varios Routers para que la señal sea accesible en
+            todas las oficinas.
   \end{itemize}
 \end{itemize}
 
