Now on Process Map

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -167,17 +167,11 @@ BCOR5mm, % Binding correction
 
 \subsection{Localizacion}
 \begin{itemize}
-  \item \textbf {Costo de transporte}
-  \begin{itemize}
-    \item No habria costo, porque cada uno podria trabajar
-            desde su domicilio, siempre y cuando pueda cumplir
-            las condiciones de los Materiales Necesarios.
-  \end{itemize}
-
   \item \textbf {Comunicaciones}
   \begin{itemize}
-    \item Todo tipo de comunicacion se realizaria a traves de internet
-            compartiendo codigo del proyecto en un repositorio privado.
+    \item Todo tipo de comunicacion se realizaria a traves de Internet en caso
+            de que el personal de la empresa se encuentre trabajando desde su
+            domicilio \(Modalidad Home Office\).
   \end{itemize}
 \end{itemize}
 
@@ -193,9 +187,24 @@ BCOR5mm, % Binding correction
 
   \item \textbf {Estructura Organizacional}
   \begin{itemize}
-    \item Lider de Proyecto
-    \item Administrador de Proyecto
+    \item Lider de Proyecto.
+            El lider de proyecto se encarga de asignar las tareas del
+            Sprint \(Modalidad de desarrollo de entregables al cliente en un
+                     tiempo acordado con el cliente no mas de 3 semanas. \)
+            a cada desarrollador a su cargo y otorgar soporte a los mismos
+            en caso de que alguna tarea asignada se haya subestimado y sea
+            mas compleja que lo que se estimo desde un principio.
+    \item Administrador de Proyecto.
+            El administrador de proyecto esta a cargo de administrar las
+            prioridades de las tareas que se van a seleccionar por Sprint.
+            Los mismos tienen contacto directo con los clientes y deciden
+            que tareas son mas importantes que otras dependendiendo de su
+            complejidad y etapa del desarrollo.
     \item Desarrolladores
+            Los desarrolladores son los encargados de analizar, estimar,
+            producir, probar y documentar cada tarea que se le es asignada.
+            Tambien tienen la obligacion de avisar a su superior ante cualquier
+            contra tiempo por incumplimiento de la fecha de entrega de alguna tarea.
   \end{itemize}
 
   \item \textbf {Mapa de Proceso}
